--- a/index.html
+++ b/index.html
@@ -15,62 +15,63 @@
 
     <div id="main-container" class="keys">
 
-        <div class="key" data-key="65">
+        <div class="key" data-key="A">
             <kbd>A</kbd>
             <span class="sound">Clap</span>
         </div>
 
-        <div class="key" data-key="83">
+        <div class="key" data-key="S">
             <kbd>S</kbd>
             <span class="sound">Hihat</span>
         </div>
 
-        <div class="key" data-key="68">
+        <div class="key" data-key="D">
             <kbd>D</kbd>
             <span class="sound">Kick</span>
         </div>
 
-        <div class="key" data-key="70">
+        <div class="key" data-key="F">
             <kbd>F</kbd>
             <span class="sound">Openhat</span>
         </div>
 
-        <div class="key" data-key="71">
+        <div class="key" data-key="G">
             <kbd>G</kbd>
             <span class="sound">Boom</span>
         </div>
 
-        <div class="key" data-key="72">
+        <div class="key" data-key="H">
             <kbd>H</kbd>
-            <span class="sound">ride</span>
+            <span class="sound">Ride</span>
         </div>
 
-        <div class="key" data-key="74">
+        <div class="key" data-key="J">
             <kbd>J</kbd>
             <span class="sound">Snare</span>
         </div>
 
-        <div class="key" data-key="74">
+        <div class="key" data-key="K">
             <kbd>K</kbd>
             <span class="sound">Tom</span>
         </div>
 
-        <div class="key" data-key="76">
+        <div class="key" data-key="L">
             <kbd>L</kbd>
             <span class="sound">Tink</span>
         </div>
 
     </div>
 
-    <audio data-key="65" src="./assets/audio/sounds/clap.wav"></audio>
-    <audio data-key="83" src="./assets/audio/sounds/kick.wav"></audio>
-    <audio data-key="68" src="./assets/audio/sounds/openhat.wav"></audio>
-    <audio data-key="70" src="./assets/audio/sounds/boom.wav"></audio>
-    <audio data-key="71" src="./assets/audio/sounds/ride.wav"></audio>
-    <audio data-key="72" src="./assets/audio/sounds/ride.wav"></audio>
-    <audio data-key="74" src="./assets/audio/sounds/snare.wav"></audio>
-    <audio data-key="75" src="./assets/audio/sounds/tom.wav"></audio>
-    <audio data-key="76" src="./assets/audio/sounds/tink.wav"></audio>
+    <audio data-key="A" src="./assets/audio/sounds/clap.wav"></audio>
+    <audio data-key="S" src="./assets/audio/sounds/kick.wav"></audio>
+    <audio data-key="D" src="./assets/audio/sounds/openhat.wav"></audio>
+    <audio data-key="F" src="./assets/audio/sounds/boom.wav"></audio>
+    <audio data-key="G" src="./assets/audio/sounds/ride.wav"></audio>
+    <audio data-key="H" src="./assets/audio/sounds/ride.wav"></audio>
+    <audio data-key="J" src="./assets/audio/sounds/snare.wav"></audio>
+    <audio data-key="K" src="./assets/audio/sounds/tom.wav"></audio>
+    <audio data-key="L" src="./assets/audio/sounds/tink.wav"></audio>
+    
 
     <script src="./script.js"></script>
 
